...
                                <rect key="frame" x="0.0" y="64" width="320" height="29"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="28" id="lkD-H7-Pow"/>
                                </constraints>
                                <segments>
                                    <segment title="UIWebView"/>
                                    <segment title="WKWebView"/>
                                    <segment title="Safari"/>
                                    <segment title="双屏"/>
                                </segments>
                                <color key="tintColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <connections>
                                    <action selector="webViewTypeChangeAction:" destination="BYZ-38-t0r" eventType="valueChanged" id="ht5-g3-jFs"/>
                                </connections>
                            </segmentedControl>
...
                            <color key="tintColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <connections>
                                <action selector="jsAction:" destination="BYZ-38-t0r" id="RIf-Ki-Wbn"/>
                            </connections>
                        </barButtonItem>
                    </toolbarItems>
                    <navigationItem key="navigationItem" title="WebView Lab" id="Tgp-oL-AwU">
                        <barButtonItem key="backBarButtonItem" title=" " id="wsh-fO-Vuy"/>
                        <barButtonItem key="leftBarButtonItem" image="garbage" id="eZJ-vL-2b1">
                            <color key="tintColor" name="systemRedColor" catalog="System" colorSpace="catalog"/>
                            <connections>
                                <action selector="cleanAction:" destination="BYZ-38-t0r" id="EUb-O5-gTg"/>
                            </connections>
...
